Enhancements to Entities